Add informational text to the Billing Project detail page

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
@@ -35,6 +35,9 @@
         </h2>
         <div id="collapseWorkspacesOne" class="accordion-collapse collapse" aria-labelledby="headingWorkspacesOne" data-bs-parent="#accordionWorkspaces">
           <div class="accordion-body">
+            <p>
+              This table shows Workspaces that are in this Billing Project.
+            </p>
             {% render_table workspace_table %}
           </div>
         </div>
