Remove fancy custom FilterForm layout
This seems to be breaking the CI, so try removing it.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
@@ -14,9 +14,12 @@
 
       <h2>Billing Projects</h2>
 
-      <div class="container pt-3">
-        {% crispy filter.form %}
-      </div>
+      <div class="my-3 p-3 bg-light border rounded shadow-sm">
+        <form method="get">
+          {{ filter.form|crispy }}
+          <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
+    </div>
 
       {% render_table table %}
 
