--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_list.html
@@ -13,9 +13,12 @@
 
       <h2>Managed Groups</h2>
 
-      <div class="container pt-3">
-        {% crispy filter.form %}
-      </div>
+      <div class="my-3 p-3 bg-light border rounded shadow-sm">
+        <form method="get">
+          {{ filter.form|crispy }}
+          <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
+    </div>
 
       {% render_table table %}
 
