Only show WorkspaceGroupSharing table to staff users
Modify the WorkspaceDetail view to only show the sharing table with
staff users, not any user with view permission.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -53,6 +53,8 @@
       </div>
     </div>
   </div>
+
+  {% if perms.anvil_consortium_manager.anvil_consortium_manager_staff_view %}
   <div class="my-3">
     <div class="accordion" id="accordionGroups">
       <div class="accordion-item">
@@ -74,6 +76,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
 {% endblock after_panel %}
 
 {% block action_buttons %}
