Add a badge about access to the WorkspaceDetail page
This badge indicates whether a user has access to a workspace on
AnVIL or not.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -17,6 +17,11 @@
   {% if object.is_locked %}
   <span class="badge bg-danger"><span class="fa-solid fa-lock me-2"></span>Locked</span>
   {% endif %}
+  {% if has_access %}
+  <span class="badge bg-success"><span class="fa-solid fa-lock-open me-2"></span>You have access to this workspace</span>
+  {% else %}
+  <span class="badge bg-danger"><span class="fa-solid fa-lock me-2"></span>No access to workspace</span>
+  {% endif %}
 {% endblock pills %}
 
 {% block panel %}
