--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -17,11 +17,16 @@
   {% if object.is_locked %}
   <span class="badge bg-danger"><span class="fa-solid fa-lock me-2"></span>Locked</span>
   {% endif %}
-  {% if has_access %}
-  <span class="badge bg-success"><span class="fa-solid fa-lock-open me-2"></span>You have access to this workspace</span>
-  {% else %}
-  <span class="badge bg-danger"><span class="fa-solid fa-lock me-2"></span>No access to workspace</span>
-  {% endif %}
+
+  <span class="badge bg-{% if has_access %}success{% else %}danger{% endif %}">
+    <span class="me-2 fa-solid fa-{% if has_access %}lock-open{% else %}lock{% endif %}"></span>
+    {% if has_access %}
+      You have access to this workspace
+    {% else %}
+      No access to workspace
+    {% endif %}
+  </span>
+
 {% endblock pills %}
 
 {% block panel %}
@@ -118,3 +123,12 @@
   {% endif %}
   </p>
 {% endblock action_buttons %}
+
+
+{% block inline_javascript %}
+<script>
+  $(document).ready(function(){
+      $('[data-bs-toggle="tooltip"]').tooltip();
+  });
+</script>
+{% endblock inline_javascript %}
