--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -7,10 +7,12 @@
 
 
 {% block after_title %}
+  {% if has_access or user.is_superuser %}
   <a class="btn btn-light" href="{{ object.get_anvil_url }}" target="_blank" role="button">
     <span class="fa-solid fa-arrow-up-right-from-square mx-1"></span>
     View on AnVIL
   </a>
+  {% endif %}
 {% endblock after_title %}
 
 {% block pills %}
