--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -10,18 +10,18 @@
   <span class="badge bg-danger"><span class="fa-solid fa-lock me-2"></span>Locked</span>
   {% endif %}
 
-  <span
-    class="badge bg-{% if has_access %}success{% else %}danger{% endif %}"
-    data-bs-toggle="tooltip"
-    data-bs-placement="bottom"
-    data-bs-title="To have access to a workspace, you must be in all of the authorization doains for the workspace and the workspace must be shared with you."
-    >
+  <span class="badge bg-{% if has_access %}success{% else %}danger{% endif %}">
     <span class="me-2 fa-solid fa-{% if has_access %}lock-open{% else %}lock{% endif %}"></span>
     {% if has_access %}
       You have access to this workspace
     {% else %}
       No access to workspace
     {% endif %}
+    <span class="ms-2 fa-solid fa-circle-question"
+    data-bs-toggle="tooltip"
+    data-bs-placement="bottom"
+    data-bs-title="To have access to a workspace, you must be in all of the authorization doains for the workspace and the workspace must be shared with you."
+    ></span>
   </span>
 
   {% if has_access or user.is_superuser %}
