Update tooltip to include account linking

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -20,7 +20,7 @@
     <span class="ms-2 fa-solid fa-circle-question"
     data-bs-toggle="tooltip"
     data-bs-placement="bottom"
-    data-bs-title="To have access to a workspace, you must be in all of the authorization doains for the workspace and the workspace must be shared with you."
+    data-bs-title="To have access to a workspace, you must have linked an AnVIL account, be in all of the authorization domains for the workspace, and have the workspace shared with you."
     ></span>
   </span>
 
