--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -45,8 +45,11 @@
     {% endif %}
   </dd>
   <dt class="col-sm-2">Name</dt> <dd class="col-sm-10">{{ object.name }}</dd>
+
+  {% if perms.anvil_consortium_manager.anvil_consortium_manager_staff_view %}
   <dt class="col-sm-2">Date added</dt> <dd class="col-sm-10">{{ object.created }}</dd>
   <dt class="col-sm-2">Date modified</dt> <dd class="col-sm-10">{{ object.modified }}</dd>
+  {% endif %}
 </dl>
   {% block workspace_data %}
   {% endblock workspace_data %}
