Allow View users to see the workspace landing page
Add explanatory text to the top of the page, which can be overridden
by sites implementing the project if they want. Only show links to
the list views for users with View permission.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
@@ -8,6 +8,17 @@
 
 <h1 class="pb-2 border-bottom">Workspace types</h1>
 
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  {% block workspace_types_explanation %}
+  <p>
+    The following boxes show different workspace types that have are associated with the consortium.
+    Different information is stored about each workspace type.
+    Click on the links in the boxes to see information about workspaces of that type.
+  </p>
+  {% endblock workspace_types_explanation %}
+  </div>
+
+
 
 <div class="album py-2">
   <div class="container">
