--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -136,35 +136,16 @@
         <h2 class="accordion-header" id="headingMembersTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersTwo" aria-expanded="false" aria-controls="collapseMembersTwo">
             <span class="fa-solid fa-user-group mx-2"></span>
-            View active accounts in this group
-            <span class="badge mx-2 bg-secondary pill"> {{ active_account_table.rows|length }}</span>
+            View accounts in this group
+            <span class="badge mx-2 bg-secondary pill"> {{ account_table.rows|length }}</span>
           </button>
         </h2>
         <div id="collapseMembersTwo" class="accordion-collapse collapse" aria-labelledby="headingMembersTwo">
           <div class="accordion-body">
             <p>
-              This table shows active Accounts that in this group, either as an admin or a member.
+              This table shows Accounts that in this group, either as an admin or a member.
             </p>
-            {% render_table active_account_table %}
-          </div>
-        </div>
-      </div>
-
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingMembersThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersThree" aria-expanded="false" aria-controls="collapseMembersTwo">
-            <span class="fa-solid fa-users-slash mx-2"></span>
-            View inactive accounts in this group
-            <span class="badge mx-2 bg-secondary pill"> {{ inactive_account_table.rows|length }}</span>
-          </button>
-        </h2>
-        <div id="collapseMembersThree" class="accordion-collapse collapse" aria-labelledby="headingMembersThree">
-          <div class="accordion-body">
-            <p>
-              This table shows a record of the inactive Accounts that were in this group, either as an admin or a member.
-              Note that these Accounts are not part of the group on AnVIL.
-            </p>
-            {% render_table inactive_account_table %}
+            {% render_table account_table %}
           </div>
         </div>
       </div>
