Update account deactivate template

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_deactivate.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_deactivate.html
@@ -17,7 +17,7 @@
       <h2>{{ object }}</h2>
 
       <p>
-        Deactivating an account will remove it from all groups on AnVIL, but will still store the record of its previous groups in this app.
+        Deactivating an account will remove it from all groups on AnVIL and in the app.
       </p>
 
       <div class="my-3">
