Update account detail template for changes

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -22,7 +22,7 @@
   {% endif %}
   {% if is_inactive %}
     <div class="my-3 alert alert-dark" role="alert">
-    This account is inactive. It has been removed from all groups on AnVIL, but a record of previous group membership is still stored in this app.
+    This account is inactive
     </div>
   {% endif %}
 {% endblock pills %}
