--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -114,6 +114,9 @@
     {% if show_reactivate_button %}
       <a href="{% url 'anvil_consortium_manager:accounts:reactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Reactivate account</a>
     {% endif %}
+    {% if show_unlink_button %}
+      <a href="{% url 'anvil_consortium_manager:accounts:unlink' uuid=object.uuid %}" class="btn btn-secondary" role="button">Unlink user</a>
+    {% endif %}
     <a href="{% url 'anvil_consortium_manager:accounts:delete' uuid=object.uuid %}" class="btn btn-danger" role="button">Delete from app</a>
   </p>
 {% endif %}
