--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -34,6 +34,9 @@
   </span>
   {% endif %}
 
+  {% block extra_pills %}
+  {% endblock extra_pills %}
+
   {% if has_access or user.is_superuser %}
   <a class="badge bg-light text-dark btn btn-light" href="{{ object.get_anvil_url }}" target="_blank" role="button">
     <span class="fa-solid fa-arrow-up-right-from-square mx-1"></span>
