Start reworking audit urls - billing projects
Refactor audit urls such that they will have their own top-level
namespace of "audit". Update the urls for billing project audits.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -46,7 +46,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:billing_projects:audit' %}" class="icon-link">Audit billing projects</a>
+              <a href="{% url 'anvil_consortium_manager:audit:billing_projects:all' %}" class="icon-link">Audit billing projects</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
