--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -35,7 +35,7 @@
               {% endif %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:billing_projects:audit' %}">Audit billing projects</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:billing_projects:all' %}">Audit billing projects</a>
               </li>
 
             </ul>
