Continue refactoring audit urls - accounts

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -73,7 +73,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:accounts:audit' %}" class="icon-link">Audit accounts</a>
+              <a href="{% url 'anvil_consortium_manager:audit:accounts:all' %}" class="icon-link">Audit accounts</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
