--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -58,7 +58,7 @@
               {% endif %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:accounts:audit' %}">Audit accounts</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:accounts:all' %}">Audit accounts</a>
               </li>
             </ul>
           </li>
