Continue reworking audit urls - managed groups
Rework the urls for managed group audit and managed group membership
audit.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -113,7 +113,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:managed_groups:audit' %}" class="icon-link">Audit groups</a>
+              <a href="{% url 'anvil_consortium_manager:audit:managed_groups:all' %}" class="icon-link">Audit groups</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
