--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -86,7 +86,7 @@
               </li>
               {% endif %}
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:managed_groups:audit' %}">Audit groups</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:managed_groups:all' %}">Audit groups</a>
               </li>
 
             </ul>
