--- a/anvil_consortium_manager/templates/anvil_consortium_manager/ignoredauditmanagedgroupmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/ignoredauditmanagedgroupmembership_detail.html
@@ -27,8 +27,9 @@
 {% block action_buttons %}
 
 {% if perms.anvil_consortium_manager.anvil_consortium_manager_staff_edit %}
-<p>
-  <a href="{% url 'anvil_consortium_manager:audit:managed_groups:membership:ignored:delete' slug=object.group.name email=object.ignored_email %}" class="btn btn-danger" role="button">Stop ignoring</a>
-</p>
+  <p>
+    <a href="{% url 'anvil_consortium_manager:audit:managed_groups:membership:ignored:update' slug=object.group.name email=object.ignored_email %}" class="btn btn-secondary" role="button">Update</a>
+    <a href="{% url 'anvil_consortium_manager:audit:managed_groups:membership:ignored:delete' slug=object.group.name email=object.ignored_email %}" class="btn btn-danger" role="button">Stop ignoring</a>
+  </p>
 {% endif %}
 {% endblock action_buttons %}
