Move urls for WorkspaceAudit into auditor app

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -46,7 +46,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:audit:billing_projects:all' %}" class="icon-link">Audit billing projects</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:billing_projects:all' %}" class="icon-link">Audit billing projects</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
@@ -73,7 +73,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:audit:accounts:all' %}" class="icon-link">Audit accounts</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:accounts:all' %}" class="icon-link">Audit accounts</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
@@ -113,7 +113,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:audit:managed_groups:all' %}" class="icon-link">Audit groups</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:managed_groups:all' %}" class="icon-link">Audit groups</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
@@ -147,7 +147,7 @@
             </li>
             {% endif %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:audit' %}" class="icon-link">Audit workspaces</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:workspaces:all' %}" class="icon-link">Audit workspaces</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
           </ul>
