--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -35,7 +35,7 @@
               {% endif %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:billing_projects:all' %}">Audit billing projects</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:billing_projects:all' %}">Audit billing projects</a>
               </li>
 
             </ul>
@@ -58,7 +58,7 @@
               {% endif %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:accounts:all' %}">Audit accounts</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:accounts:all' %}">Audit accounts</a>
               </li>
             </ul>
           </li>
@@ -86,7 +86,7 @@
               </li>
               {% endif %}
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:audit:managed_groups:all' %}">Audit groups</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:managed_groups:all' %}">Audit groups</a>
               </li>
 
             </ul>
@@ -111,7 +111,7 @@
               {% endif %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:audit' %}">Audit workspaces</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:workspaces:all' %}">Audit workspaces</a>
               </li>
 
             </ul>
