--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -174,7 +174,7 @@
 {% endif %}
 
 <p>
-  <a href="{% url 'anvil_consortium_manager:audit:managed_groups:membership:all' slug=object.name %}" class="btn btn-secondary" role="button">Audit membership</a>
+  <a href="{% url 'anvil_consortium_manager:auditor:managed_groups:membership:all' slug=object.name %}" class="btn btn-secondary" role="button">Audit membership</a>
 </p>
 {% if show_edit_links %}
   <p>
