--- a/anvil_consortium_manager/templates/anvil_consortium_manager/snippets/audit_managedgroupmembership_notinapp_ignore_button.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/snippets/audit_managedgroupmembership_notinapp_ignore_button.html
@@ -1,5 +1,5 @@
 <a
-  href="{% url "anvil_consortium_manager:auditor:managed_groups:membership:ignored:new" record.group record.email %}"
+  href="{% url "anvil_consortium_manager:auditor:managed_groups:membership:by_group:ignored:new" record.group record.email %}"
   class="btn btn-danger btn-sm"
   target="_blank"
   >
