Add ignore reporting to audit management command
Report the number of ignored records associated with an audit. To
do this, we need to tell the audit which model to look at; we can't
just use the audit results because sometimes the ignored records are
nested below (e.g., from the ManagedGroupMembershipAudit, which is
run by ManagedGroupAudit, and ManagedGroupAudit does not know about
anything ignored by ManagedGroupMembershipAudit). Perhaps there is
a better way to structure this, but we'll leave that as a future problem
to solve.

--- a/anvil_consortium_manager/templates/auditor/email_audit_report.html
+++ b/anvil_consortium_manager/templates/auditor/email_audit_report.html
@@ -17,7 +17,12 @@
 
       <h2>Verified</h2>
       <div class="container">
-        <p>{{ verified_results|length }} instance(s) verified.</p>
+        <p>{{ audit_results.get_verified_results|length }} instance(s) verified.</p>
+      </div>
+
+      <h2>Ignored</h2>
+      <div class="container">
+        <p>Ignoring {{ n_ignored }} record(s)</p>
       </div>
 
       <h2>Errors</h2>
