--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -88,6 +88,10 @@
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:managed_groups:all' %}">Audit groups</a>
               </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:managed_groups:membership:ignored' %}">See ignored group memberships</a>
+              </li>
+
 
             </ul>
           </li>
