--- a/anvil_consortium_manager/templates/auditor/ignoredmanagedgroupmembership_list.html
+++ b/anvil_consortium_manager/templates/auditor/ignoredmanagedgroupmembership_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% load render_table from django_tables2 %}
+{% load crispy_forms_tags %}
 
 {% block title %}Ignored Managed Group membership audit records{% endblock %}
 
@@ -16,6 +17,11 @@
       <p>
         The following records will be ignored when running AnVIL audits for group membership.
       </p>
+
+      <div class="container pt-3">
+        {% crispy filter.form %}
+      </div>
+
       {% render_table table %}
 
     </div>
