--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_link_error_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_link_error_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-Error unhandled exception encountered in call to after_account_link_verify
+Error unhandled exception encountered in call to {{ hook }}
 For account {{ account }}, email entry {{ email_entry }}
 
 Account still linked. Details {{ error_description }}. Full exception in logs.
