Add content block that can be overridden for account notificaiton email

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_notification_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_notification_email.html
@@ -2,4 +2,7 @@
 
 User {{ user.username }} has verified AnVIL account {{ email }}.
 
+{% block extra_content %}
+{% endblock extra_content %}
+
 {% endautoescape %}
