Add alert when workspace has an auth domain not managed by the app
Update the WorkspaceDetail view and corresponding tmeplate to show
an alert when the workspace has an auth domain that is not managed
by the app.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -7,6 +7,12 @@
 
 {% block pills %}
 
+  {% if has_authorization_domain_not_managed_by_app %}
+  <div class="alert alert-warning my-3" role="alert">
+    This workspace has at least one authorization domain that is not managed by the app, so access cannot always be determined.
+  </div>
+  {% endif %}
+
   {% include 'anvil_consortium_manager/snippets/workspace_is_locked_pill.html' %}
 
   {% include 'anvil_consortium_manager/snippets/workspace_access_pill.html' %}
