Move audit templates into auditor subdirectory

--- a/anvil_consortium_manager/templates/auditor/billing_project_audit.html
+++ b/anvil_consortium_manager/templates/auditor/billing_project_audit.html
@@ -1,4 +1,4 @@
-{% extends "anvil_consortium_manager/audit.html" %}
+{% extends "auditor/audit.html" %}
 {% block title %}Audit Billing Projects{% endblock %}
 
 {% block main_header %}
