--- a/anvil_consortium_manager/templates/auditor/workspace_audit.html
+++ b/anvil_consortium_manager/templates/auditor/workspace_audit.html
@@ -1,4 +1,4 @@
-{% extends "anvil_consortium_manager/audit.html" %}
+{% extends "auditor/audit.html" %}
 {% block title %}Audit Workspaces{% endblock %}
 
 {% block main_header %}
