Add functionality for caching and reviewing BillingProjectAudits
Add a new view to review BillingProjectAudits, and modify the
BillingProjectAuditRun view to run and cache the results, then
redirect to the new review view. Split the AuditMixin into two,
one to run and cache an audit and another to review a cached
result. Use the mixin in the new views. Add tests for the new views.
Update the test settings file to mimic the planned caching strategy
(db backend, no expiration).

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -151,7 +151,7 @@
           <ul class="list-group list-group-flush">
 
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:auditor:billing_projects:all' %}" class="icon-link">Audit Billing Projects</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:billing_projects:run' %}" class="icon-link">Audit Billing Projects</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
 
