--- a/anvil_consortium_manager/templates/auditor/nav_items.html
+++ b/anvil_consortium_manager/templates/auditor/nav_items.html
@@ -5,7 +5,7 @@
     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 
       <li>
-        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:billing_projects:all' %}">Audit Billing Projects</a>
+        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:billing_projects:run' %}">Audit Billing Projects</a>
       </li>
 
       <li>
