--- a/anvil_consortium_manager/templates/auditor/nav_items.html
+++ b/anvil_consortium_manager/templates/auditor/nav_items.html
@@ -5,15 +5,15 @@
     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 
       <li>
-        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:billing_projects:run' %}">Audit Billing Projects</a>
+        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:billing_projects:review' %}">Audit Billing Projects</a>
       </li>
 
       <li>
-        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:accounts:all' %}">Audit Accounts</a>
+        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:accounts:review' %}">Audit Accounts</a>
       </li>
 
       <li>
-        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:managed_groups:all' %}">Audit Managed Groups</a>
+        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:managed_groups:review' %}">Audit Managed Groups</a>
       </li>
 
       <li>
