--- a/anvil_consortium_manager/templates/auditor/managed_group_audit_run.html
+++ b/anvil_consortium_manager/templates/auditor/managed_group_audit_run.html
@@ -4,7 +4,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Run a billing project audit{% endblock %}
+{% block title %}Run Managed Group audit{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -13,14 +13,14 @@
     <div class="col-sm-12">
 
 
-      <h2>Run a billing project audit</h2>
+      <h2>Run Managed Group audit</h2>
 
       <div class="my-3 p-3 bg-light border rounded shadow-sm">
-        {% include "auditor/snippets/billing_project_audit_explanation.html" %}
+        {% include "auditor/snippets/managedgroup_audit_explanation.html" %}
       </div>
 
       <p>
-        Are you sure you want to run a billing project audit and cache the result?
+        Are you sure you want to run a Managed Group audit and cache the result?
       </p>
 
       <form method="post">
