Update Workspace audits to new run and review caching strategy

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -166,7 +166,7 @@
             </li>
 
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:auditor:workspaces:all' %}" class="icon-link">Review Workspace audit</a>
+              <a href="{% url 'anvil_consortium_manager:auditor:workspaces:review' %}" class="icon-link">Review Workspace audit</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
 
