--- a/anvil_consortium_manager/templates/auditor/nav_items.html
+++ b/anvil_consortium_manager/templates/auditor/nav_items.html
@@ -17,7 +17,7 @@
       </li>
 
       <li>
-        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:workspaces:all' %}">Audit Workspaces</a>
+        <a class="dropdown-item" href="{% url 'anvil_consortium_manager:auditor:workspaces:review' %}">Audit Workspaces</a>
       </li>
 
       <li><hr class="dropdown-divider"></li>
